# Chatbot

./: .gitignore  README.md  pyproject.toml
data/: car_vs_car_full.csv
src/: main.py  streamlit_app.py
src/DB/: gcs_to_db_trigger.py
src/LangGraphScripts/: accident_engine.py  agreement_process.py
src/RAG/: AccidentRAGEngine.py  build_vector_DB.py  chatbot_rag.py  qa_bot_old.py  rag_process.py  rag_test.ipynb
src/RAG 학습/데이터 인덱싱/: rag_1.ipynb
src/학습/RAG/: 그래프RAG.ipynb
src/학습/RAG_학습/데이터_인덱싱/: 5_1.교통사고처리_OpenAPI_Ollama_PDF_RAG.py  rag_1.ipynb
src/학습/랭그래프_학습/: 04_랭그래프를_활용한_메모리_기능.ipynb  05_랭그래프로_구현하는_인지_아키텍처.ipynb  1.합의처리_Agent_예제.py  사전작업.ipynb
vectorDB/faiss_index_judicial/: index.faiss  index.pkl
vectorDB/faiss_index_samsung_fire/: index.faiss  index.pkl
