[project]
name = "accident-response-chatbot"
version = "0.1.0"
description = "교통사고 처치 솔루션 챗봇"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langserve[all]>=0.3.0",
    "faiss-cpu>=1.8.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.6.0",
    "pymupdf>=1.26.7",
]

# 최신 uv 방식: dependency-groups 사용
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"] # 소스 코드 위치 명시

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
