[project]
name = "accident-response-chatbot"
version = "0.1.0"
requires-python = "==3.12.8"

dependencies = [
    "fastapi>=0.128,<0.130",
    "uvicorn[standard]>=0.40,<0.41",
    "langchain>=1.2,<1.3",
    "langchain-core>=1.2,<1.3",
    "langchain-community>=0.4,<0.5",
    "langchain-openai>=1.1,<1.2",
    "langchain-text-splitters>=1.1,<1.2",
    "langgraph>=1.0,<1.1",
    "faiss-cpu>=1.8.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "pypdf>=6.6.0",
    "pymupdf>=1.26.7",
]
